--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     </div>
     <ul class="nav-links">
         <li><a href="index.html"> Statistics </a></li>
+        <li><a href="map.html"> Assesment Locations </a></li>
         <li><a href="info.html"> Vaccine Information</a></li>
     </ul>
     <div class="burger">
