--- a/public/info.html
+++ b/public/info.html
@@ -18,7 +18,8 @@
     </div>
     <ul class="nav-links">
         <li><a href="index.html"> Statistics </a></li>
-        <li><a href="services.html"> Vaccine Information</a></li>
+        <li><a href="map.html"> Assesment Locations </a></li>
+        <li><a href="info.html"> Vaccine Information</a></li>
     </ul>
     <div class="burger">
         <div class="line1"></div>
@@ -27,5 +28,5 @@
     </div>
 </nav>
 <iframe src="https://files.ontario.ca/moh-covid-19-vaccines-fact-sheet-en-2021-02-05.pdf" width="100%"
-        height="500px">
+        height="1000px">
 </body>
