--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="style.css" />
     <script src='https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js'></script>
-    <title>Document</title>
+    <title>Covid-19 Ontario</title>
 </head>
 <body>
     <!-- Navigation Bar -->
