--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,8 @@
     <canvas id='myChartC' width='900' height='500'></canvas>
     </div>
 </div>
+<p id="credit">© Created by Isaiah Linares, Leong Li, Chun-Kit Chung</p>
+<p id="source">Data sourced from https://opencovid.ca/api/</p>
     <script>
 
         var totalVacc=0; 
