--- a/public/map.html
+++ b/public/map.html
@@ -34,9 +34,10 @@
         <div class="line3"></div>
     </div>
 </nav>
+    <h1>Covid-19 Assesment Centres in Ontario</h1>
     <div id="map"></div>
     <p><a href="https://www.maptiler.com/copyright/" target="_blank">© MapTiler</a> <a
-            href="https://www.openstreetmap.org/copyright" target="_blank">© OpenStreetMap contributors</a></p>
+        href="https://www.openstreetmap.org/copyright" target="_blank">© OpenStreetMap contributors</a></p>
     <script>
         var map = L.map('map').setView([51.2538, -85.3232], 5);
         L.tileLayer('https://api.maptiler.com/maps/streets/{z}/{x}/{y}.png?key=bVQrYjaeW0airGBjsvFz', {
