--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,10 @@
 
     <div class="main_graphs">
         <div class="graph">
-            <label>
-                <h6 id="totalV">Daily Tests in Ontario<span id="totalFV"></span></h6>
-            </label>
-            <div class="chartV-container">
+            <button id="test-button">
+                Tests
+            </button>
+            <div class="tests">
                 <canvas id='myChartT' width='900' height='500'></canvas>
             </div>
         </div>
@@ -44,7 +44,7 @@
             <label class="graph-labels">
                 <h6 id="totalC">Daily Cases in Ontario<span id="totalCS"></span></h6>
             </label>
-            <div class="chartC-container">
+            <div class="cases">
                 <canvas id='myChartC' width='900' height='500'></canvas>
             </div>
         </div>
