Fetching from different vaccination API

--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,19 @@
             </div>
         </div>
         <div class="graph">
-            <label class="graph-labels">
-                <h6 id="totalC">Daily Cases in Ontario<span id="totalCS"></span></h6>
-            </label>
+            <button id="cases-button">
+                Cases
+            </button>
             <div class="cases">
                 <canvas id='myChartC' width='900' height='500'></canvas>
+            </div>
+        </div>
+        <div class="graph">
+            <button id="vac-button">
+                Vacinations
+            </button>
+            <div class="vac">
+                <canvas id='myPieV' width='900' height='500'></canvas>
             </div>
         </div>
         <br />
