Fixed flex box issues

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                 Tests
             </button>
             <div class="tests">
-                <canvas id='myChartT' width='900' height='500'></canvas>
+                <canvas id='myChartT'></canvas>
             </div>
         </div>
         <div class="graph">
