--- a/public/info.html
+++ b/public/info.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css" />
     <script src='https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js'></script>
     <title>Document</title>
 </head>
+
 <body>
     <!-- Navigation Bar -->
- <nav>
-    <div class="logo">
-        <h1> Covid-19 Ontario </h1>
-    </div>
-    <ul class="nav-links">
-        <li><a href="index.html"> Statistics </a></li>
-        <li><a href="map.html"> Assesment Locations </a></li>
-        <li><a href="info.html"> Vaccine Information</a></li>
-    </ul>
-    <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-    </div>
-</nav>
-<iframe src="https://files.ontario.ca/moh-covid-19-vaccines-fact-sheet-en-2021-02-05.pdf" width="100%"
+    <nav>
+        <div class="logo">
+            <h1> Covid-19 Ontario </h1>
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html"> Statistics </a></li>
+            <li><a href="map.html"> Assesment Locations </a></li>
+            <li><a href="info.html"> Vaccine Information</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </nav>
+    <iframe src="https://files.ontario.ca/moh-covid-19-vaccines-fact-sheet-en-2021-02-05.pdf" width="100%"
         height="1000px">
+        <script src="app.js"></script>
 </body>
