--- a/public/map.html
+++ b/public/map.html
@@ -113,6 +113,13 @@
         }
 
 
+        getLocations();
+        //Live location info
+        async function getLocations() {
+            const response = await fetch('https://covid-19.ontario.ca/covid-19-ac-assets/data/locations.json');
+            const data = await response.json();
+            console.log(data);
+        }
     </script>
 </body>
 
