--- a/public/map.html
+++ b/public/map.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="map.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js"></script>
     <style>
@@ -35,8 +36,10 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <h1>Covid-19 Assesment Centres in Ontario</h1>
-    <div id="map"></div>
+    <div class="'centers">
+        <h1 id='vac_logo'>Find a Vaccination Centre Near You!</h1>
+        <div id="map"></div>
+    </div>
     <p><a href="https://www.maptiler.com/copyright/" target="_blank">© MapTiler</a> <a
             href="htt ps://www.openstreetmap.org/copyright" target="_blank">© OpenStreetMap contributors</a></p>
     <script src="nav.js"></script>
