switched to dynamic dropdown for city

--- a/public/map.html
+++ b/public/map.html
@@ -38,15 +38,19 @@
     </nav>
     <div class="'centers">
         <h1 id='vac_logo'>Find a Vaccination Centre Near You!</h1>
-        <div class="wrapper">
-            <div class="item">box-1</div>
-            <div class="item">box-2</div>
-            <div class="item">box-3</div>
-            <div class="item">box-4</div>
-            <div class="item">box-5</div>
-            <div class="item">box-6</div>
+        <div class="dropdown">
+            <span>City</span>
+            <div class="dropdown-content">
+                <ul>
+                    <li>Toronto</li>
+                    <li>Markham</li>
+                    <li>Etobicoke</li>
+                    <li>Barrie</li>
+                    <li>Missasauga</li>
+                </ul>
+            </div>
         </div>
-        <!-- <div id="map"></div> -->
+        <div id="map"></div>
     </div>
     <p><a href="https://www.maptiler.com/copyright/" target="_blank">© MapTiler</a> <a
             href="htt ps://www.openstreetmap.org/copyright" target="_blank">© OpenStreetMap contributors</a></p>
