search places markers

--- a/public/map.html
+++ b/public/map.html
@@ -38,7 +38,7 @@
         </div>
     </nav>
     <div class="'centers">
-        <h1 id='vac_logo'>Find a Vaccination Centre Near You!</h1>
+        <!-- <h1 id='vac_logo'>Find a Vaccination Centre Near You!</h1>
         <div class="dropdown">
             <span>City</span>
             <div class="dropdown-content">
@@ -50,16 +50,16 @@
                     <li>Missasauga</li>
                 </ul>
             </div>
-        </div>
+        </div> -->
 
         <div class='wrapper'>
             <div class='search_box'>
                 <div class='dropdown'>
                     <div class='default_option'>All</div>
                     <ul class="cities">
-                        <li>All</li>
-                        <li>Recent</li>
-                        <li>Popular</li>
+                        <li>Toronto</li>
+                        <li>Etobicoke</li>
+                        <li>Barrie</li>
                     </ul>
                 </div>
                 <div class="search_field">
