--- a/public/map.html
+++ b/public/map.html
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
                 <div class="search_field">
-                    <input type="text" class="input" placeholder="Search">
+                    <input type="search" class="input" placeholder="Search">
                     <i class="fas fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
