revamed css, cleaned up unnecessary code

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
     <script src='https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js'></script>
     <script src="nav.js"></script>
     <title>Covid-19 Ontario</title>
@@ -17,9 +18,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav>
-        <div class="logo">
-            <h1> Covid-19 Ontario </h1>
-        </div>
+        <h1 id="logo"> Covid-19 Ontario </h1>
         <ul class="nav-links">
             <li><a href="index.html"> Statistics </a></li>
             <li><a href="map.html"> Assesment Locations </a></li>
@@ -60,7 +59,7 @@
         <br />
         <div class="credit">
             <p id="credit">© Created by Isaiah Linares, Leong Li, Chun-Kit Chung</p>
-            <p id="source">Data sourced from https://opencovid.ca/api/</p>
+            <p id="source">Data sourced from https://opencovid.ca/api/ and https://api.covid19tracker.ca/</p>
         </div>
     </div>
     <script src="app.js"></script>
