--- a/public/map.html
+++ b/public/map.html
@@ -6,26 +6,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="map.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js"></script>
     <script src="https://kit.fontawesome.com/30ff8945a0.js" crossorigin="anonymous"></script>
-    <style>
-        #map {
-            position: absolute;
-            top: 15%;
-            right: 0;
-            bottom: 0;
-            left: 10%;
-        }
-    </style>
 </head>
 
 <body>
     <!-- Navigation Bar -->
     <nav>
-        <div class="logo">
-            <h1> Covid-19 Ontario </h1>
-        </div>
+        <h1 id="logo"> Covid-19 Ontario </h1>
         <ul class="nav-links">
             <li><a href="index.html"> Statistics </a></li>
             <li><a href="map.html"> Assesment Locations </a></li>
@@ -37,24 +29,24 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <div class="'centers">
-        <div class='wrapper'>
-            <div class='search_box'>
-                <div class='dropdown'>
-                    <div class='default_option'>All</div>
-                    <ul class="cities">
-                    </ul>
-                </div>
-                <div class="search_field">
-                    <input type="search" class="input" placeholder="Search">
-                    <i class="fas fa-solid fa-magnifying-glass"></i>
-                </div>
+    <div class='wrapper'>
+        <div class='search_box'>
+            <div class='dropdown'>
+                <div class='default_option'>All</div>
+                <ul class="cities">
+                </ul>
+            </div>
+            <div class="search_field">
+                <input type="search" class="input" placeholder="Search">
+                <i class="fas fa-solid fa-magnifying-glass"></i>
             </div>
         </div>
-        <div id="map"></div>
     </div>
-    <p><a href="https://www.maptiler.com/copyright/" target="_blank">© MapTiler</a> <a
-            href="htt ps://www.openstreetmap.org/copyright" target="_blank">© OpenStreetMap contributors</a></p>
+    <div id="map"></div>
+    <div class="credit">
+        <p id="credit">© Created by Isaiah Linares, Leong Li, Chun-Kit Chung</p>
+        <p id="source">Data sourced from https://covid-19.ontario.ca/</p>
+    </div>
     <script src="nav.js"></script>
     <script src="map.js"></script>
 </body>
