more css, adding more pies to vacination area on booster data

--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,15 @@
             <button id="vac-button">
                 Vacinations
             </button>
-            <div class="vac">
-                <canvas id='myPieV' width='900' height='500'></canvas>
+            <div class="vac-pies">
+                <div class="vac">
+                    <canvas id='myPieV' width='900' height='500'></canvas>
+                </div>
+                <label class="total_vac_label">Total Vacinated: <span id="total_vac"></span></label>
+                <div class="booster-1">
+                    <canvas id="booster-1" width="900" height="500"></canvas>
+                </div>
+                <label class="total_booster1_label">Total First with Booster:</label>
             </div>
         </div>
         <br />
