--- a/public/index.html
+++ b/public/index.html
@@ -54,13 +54,20 @@
             </button>
             <div class="vac-pies">
                 <div class="vac">
-                    <canvas id='myPieV' width='900' height='500'></canvas>
+                    <canvas id='myPieV'></canvas>
+                    <label class="total_vac_label">Total Polulation Fulyl Vacinated: <span
+                            id="total_vac"></span></label>
                 </div>
-                <label class="total_vac_label">Total Vacinated: <span id="total_vac"></span></label>
                 <div class="booster-1">
-                    <canvas id="booster-1" width="900" height="500"></canvas>
+                    <canvas id="booster-1"></canvas>
+                    <label class="total_booster1_label">Total Population witth First with Booster: <span
+                            id="total_booster1"></span></label>
                 </div>
-                <label class="total_booster1_label">Total First with Booster:</label>
+                <div class="booster-2">
+                    <canvas id="booster-2"></canvas>
+                    <label class="total_booster2_label">Total Population with Second Booster: <span
+                            id="total+booster-2"></span></label>
+                </div>
             </div>
         </div>
         <br />
