used inline-block to style graphs, labels now updating too

--- a/public/index.html
+++ b/public/index.html
@@ -60,13 +60,13 @@
                 </div>
                 <div class="booster-1">
                     <canvas id="booster-1"></canvas>
-                    <label class="total_booster1_label">Total Population witth First with Booster: <span
+                    <label class="total_booster1_label">Total Population witth First Booster: <span
                             id="total_booster1"></span></label>
                 </div>
                 <div class="booster-2">
                     <canvas id="booster-2"></canvas>
                     <label class="total_booster2_label">Total Population with Second Booster: <span
-                            id="total+booster-2"></span></label>
+                            id="total_booster2"></span></label>
                 </div>
             </div>
         </div>
