--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav>
-        <h1 id="logo"> Covid-19 Ontario </h1>
+        <div id="logo"><a href="index.html">Covid-19 Ontario</a></div>
         <ul class="nav-links">
             <li><a href="index.html"> Statistics </a></li>
             <li><a href="map.html"> Assesment Locations </a></li>
