spell check, a lot of css change

--- a/public/index.html
+++ b/public/index.html
@@ -55,12 +55,12 @@
             <div class="vac-pies">
                 <div class="vac">
                     <canvas id='myPieV'></canvas>
-                    <label class="total_vac_label">Total Polulation Fulyl Vacinated: <span
+                    <label class="total_vac_label">Total Population Fully Vacinated: <span
                             id="total_vac"></span></label>
                 </div>
                 <div class="booster-1">
                     <canvas id="booster-1"></canvas>
-                    <label class="total_booster1_label">Total Population witth First Booster: <span
+                    <label class="total_booster1_label">Total Population with First Booster: <span
                             id="total_booster1"></span></label>
                 </div>
                 <div class="booster-2">
