--- a/public/map.html
+++ b/public/map.html
@@ -29,11 +29,10 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <div id="map"></div>
     <div class='wrapper'>
         <div class='search_box'>
             <div class='dropdown'>
-                <div class='default_option'>All</div>
+                <div class='default_option'>Region</div>
                 <ul class="cities">
                 </ul>
             </div>
@@ -43,6 +42,7 @@
             </div>
         </div>
     </div>
+    <div id="map"></div>
     <div class="credit">
         <p id="credit">© Created by Isaiah Linares, Leong Li, Chun-Kit Chung</p>
         <p id="source">Data sourced from https://covid-19.ontario.ca/</p>
