added hospitalization data

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                 Cases
             </button>
             <div class="cases">
-                <canvas id='myChartC' width='900' height='500'></canvas>
+                <canvas id='myChartC'></canvas>
             </div>
         </div>
         <div class="graph">
@@ -69,6 +69,14 @@
                     <label class="total_booster2_label">Total Population with Second Booster: <span
                             id="total_booster2"></span></label>
                 </div>
+            </div>
+        </div>
+        <div class="graph">
+            <button id="hosp_button">
+                Hospitalizations
+            </button>
+            <div class="hosp">
+                <canvas id="myChartH"></canvas>
             </div>
         </div>
         <br />
