added daily hospitilizations, fiexed graph issues

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,12 @@
                 Hospitalizations
             </button>
             <div class="hosp">
+                <h1>Last <span id="hosp_months"></span> Months of Active Hospitalizations</h1>
                 <canvas id="myChartH"></canvas>
+            </div>
+            <div class="hosp_daily">
+                <h1>Last <span id="hosp_months_daily"></span> Months of Change in Hospitalizations</h1>
+                <canvas id="myChartHDaily"></canvas>
             </div>
         </div>
         <br />
