--- a/public/map.html
+++ b/public/map.html
@@ -33,9 +33,8 @@
     <div class='wrapper'>
         <div class='search_box'>
             <div class='dropdown'>
-                <div class='default_option'>Region</div>
-                <ul class="cities">
-                </ul>
+                <div class='default_option'>Regions</div>
+                <ul class="cities"></ul>
             </div>
             <div class="search_field">
                 <input type="search" class="input" placeholder="Search">
