Cleaning up code

--- a/public/index.html
+++ b/public/index.html
@@ -79,15 +79,15 @@
                 Hospitalizations
             </button>
             <div class="hosp">
-                <h1>Last <span id="hosp_months"></span> Month/s of Active Hospitalizations</h1>
+                <h1>Last <span id="months"></span> Month/s of Active Hospitalizations</h1>
                 <canvas id="myChartH"></canvas>
             </div>
             <div class="hosp_daily">
-                <h1>Last <span id="hosp_months_daily"></span> Month/s of Change in Hospitalizations</h1>
+                <h1>Last <span id="months_daily"></span> Month/s of Change in Hospitalizations</h1>
                 <canvas id="myChartHDaily"></canvas>
             </div>
             <div class="icu">
-                <h1>Last <span id="icu_months"></span> Month/s of Active ICU Patients</h1>
+                <h1>Last <span id="months"></span> Month/s of Active ICU Patients</h1>
                 <canvas id="icuChart"></canvas>
             </div>
         </div>
