--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
             <div class="line3"></div>
         </div>
     </nav>
-
+    <h1 id="main-label">Visualization of Covid-19 Data for Ontario</h1>
     <div class="main_graphs">
         <div class="graph" id="graph1">
             <button id="test-button">
@@ -102,6 +102,7 @@
         <div class="credit">
             <p id="credit">© Created by Isaiah Linares, Leong Li, Chun-Kit Chung</p>
             <p id="source">Data sourced from https://opencovid.ca/api/ and https://api.covid19tracker.ca/</p>
+            <p>https://github.com/isaiahL88/covid-19ontario/</p>
         </div>
     </div>
     <script src="app.js"></script>
