fixed problem with node modules

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                 Tests
             </button>
             <div class="tests">
-                <h1>Last <span class="months"></span> Months of Covid-19 Tests Taken Daily</h1>
+                <h1>Last <span class="months"></span> Month/s of Covid-19 Tests Taken Daily</h1>
                 <canvas id='myChartT'></canvas>
             </div>
         </div>
@@ -47,7 +47,7 @@
                 Cases
             </button>
             <div class="cases">
-                <h1>Last <span class="months"></span> Months of Daily Reported Covid-19 Cases</h1>
+                <h1>Last <span class="months"></span> Month/s of Daily Reported Covid-19 Cases</h1>
                 <canvas id='myChartC'></canvas>
             </div>
         </div>
